# research-bandits-methods

./: .pre-commit-config.yaml  .secrets.baseline  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: demo.ipynb
src/research_bandits_methods/: __init__.py  constants.py
src/research_bandits_methods/bandits/: __init__.py  distributions.py
src/research_bandits_methods/bandits/policies/: __init__.py  markovian_policies.py
src/research_bandits_methods/contextual_bandits/: __init__.py
tests/: test_distributions.py  test_main.py  test_markovian_policies.py
