[project]
name = "research-bandits-methods"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ramonvdakker", email = "ramon.vdakker@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
research-bandits-methods = "research_bandits_methods:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit[toml]>=1.8.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
